--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "## Table of contents",
 	"main": "index.js",
 	"scripts": {
-		"build": "sass sass/main.scss css/main.css"
+		"build": "sass sass:css",
+		"start": "sass --watch sass:css"
 	},
 	"repository": {
 		"type": "git",
